force-app/main/default/objects/Network_Site__c/Network_Site__c.object-meta.xml
<CustomObject>
    <label>Network Site</label>
    <pluralLabel>Network Sites</pluralLabel>
    <description
  >A physical service delivery location for a customer account. Business customers can have multiple network sites, each independently provisioned and supported.</description>
    <sharingModel>Private</sharingModel>
    <nameField>
        <label>Network Site Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>