force-app/main/default/objects/Network_Site__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Network Sites</relationshipLabel>
    <relationshipName>Network_Sites</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >The customer account this network site belongs to.</description>
</CustomField>