force-app/main/default/objects/Network_Site__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Text</type>
    <length>80</length>
</CustomField>