force-app/main/default/objects/Network_Site__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <label>Site Name</label>
    <type>Text</type>
    <length>80</length>
    <description
  >Friendly display name used to identify this site in provisioning task lists and dashboards, distinct from the unique record name.</description>
</CustomField>